Improving code quality
git-svn-id: svn://svn.code.sf.net/p/web-harvest/code/trunk@426 a57e4815-81e3-4922-91ae-0d9c2f5eb974